add contact page & form

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "plaiceholder": "^3.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "resend": "^6.0.1",
     "sass": "^1.89.2",
     "zod": "^4.0.5"
   },
